--- a/style.css
+++ b/style.css
@@ -61,39 +61,49 @@ body {
 }
 
 .container {
-    position: relative;
-    width: 720px;
-    height: 480px;
+  position: relative;
+  width: 720px;
+  height: 480px;
+}
+
+#startScreenContainer,
+#gameOverScreenContainer {
+  position: absolute;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  z-index: 2;
+  display: none;
+  justify-content: center;
+  align-items: end;
 }
 
 #gameOverScreenContainer {
-    position: absolute;
-    background-image: url('img_pollo_locco/img/9_intro_outro_screens/game_over/oh no you lost!.png');
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 10px;
-    z-index: 2;
-    display: none;
-    justify-content: center;
-    align-items: end;
+  background-image: url("img_pollo_locco/img/9_intro_outro_screens/game_over/oh no you lost!.png");
 }
 
 .restart-home-container {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 350px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 350px;
+}
+
+.start-game-container {
+  margin-top: 350px;
+  display: flex;
+  justify-content: center;
 }
 
 .restart-button {
-    background: #7fcd2c;
-    padding: 20px;
-    border-radius: 10px;
-    cursor: pointer;
-    font-size: 24px;
-    font-weight: 700;
+  background: #7fcd2c;
+  padding: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 24px;
+  font-weight: 700;
 }
