--- a/style.css
+++ b/style.css
@@ -13,8 +13,15 @@ body {
   position: relative;
 }
 
+.canvas-container {
+  width: 100% !important;
+  height: 100% !important;
+}
+
 #canvas {
   border-radius: 10px;
+  width: 100% !important;
+  height: 100% !important;
 }
 
 .game-symbols {
