--- a/style.css
+++ b/style.css
@@ -80,7 +80,8 @@ body {
 }
 
 #startScreenContainer,
-#gameOverScreenContainer {
+#gameOverScreen,
+#lostContainer {
   position: absolute;
   background-position: center;
   background-size: cover;
@@ -96,7 +97,11 @@ body {
   align-items: end;
 }
 
-#gameOverScreenContainer {
+#gameOverScreen {
+  background-image: url("img_pollo_locco/img/9_intro_outro_screens/game_over/game over!.png");
+}
+
+#lostContainer {
   background-image: url("img_pollo_locco/img/9_intro_outro_screens/game_over/oh no you lost!.png");
 }
 
