--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 10px;
+  border-radius: 0px;
   z-index: 2;
   display: none;
   justify-content: center;
@@ -121,12 +121,18 @@ body {
 }
 
 .restart-button {
-  background: #7fcd2c;
+  background: #877315;
   padding: 20px;
   border-radius: 10px;
   cursor: pointer;
   font-size: 24px;
   font-weight: 700;
+}
+
+@media only screen and (min-width: 933px) {
+  .mobile-controls {
+      display: none;
+  }
 }
 
 @media only screen and (max-width: 932px) {
@@ -138,6 +144,10 @@ body {
     display: none;
   }
 
+  #canvas {
+    border-radius: 0px;
+  }
+
   .container {
     position: relative;
     width: 100vw;
@@ -147,6 +157,10 @@ body {
   }
 
   .legend-container {
+    display: none;
+  }
+
+  .fullscreen-icon {
     display: none;
   }
 
@@ -165,10 +179,14 @@ body {
     font-size: 16px;
   }
 
+  .mobile-controls {
+    display: block;
+}
+
   .mobile-controls-left {
     z-index: 2;
     position: fixed;
-    bottom: 20px;
+    bottom: 5px;
     left: 20px;
     display: flex;
     align-items: center;
@@ -177,15 +195,26 @@ body {
   .mobile-controls-right {
     z-index: 2;
     position: fixed;
-    bottom: 20px;
+    bottom: 5px;
     right: 20px;
     display: flex;
     align-items: center;
   }
 
   .control-btn {
-    background-color: #ccc;
+    width: 30px;
     padding: 10px;
+    margin-right: 10px;
+    user-select: none;
+    background-color: #877315;
+    border-radius: 50%;
+  }
+
+  .control-btn-bottle {
+    width: 50px;
+    background-color: #877315;
+    border-radius: 50%;
+    border-radius: 50%;
     margin-right: 10px;
     user-select: none;
   }
@@ -197,4 +226,12 @@ body {
   #right-btn {
     right: 20px;
   }
+
+  .rotate-90 {
+    transform: rotate(90deg);
+}
+
+.rotate-180 {
+    transform: rotate(180deg);
+}
 }
