--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 0px;
+  border-radius: 10px;
   z-index: 2;
   display: none;
   justify-content: center;
@@ -131,7 +131,7 @@ body {
 
 @media only screen and (min-width: 933px) {
   .mobile-controls {
-      display: none;
+    display: none;
   }
 }
 
@@ -142,6 +142,12 @@ body {
 
   h1 {
     display: none;
+  }
+
+  #startScreenContainer,
+  #gameOverScreen,
+  #lostContainer {
+    border-radius: 0px;
   }
 
   #canvas {
@@ -181,7 +187,7 @@ body {
 
   .mobile-controls {
     display: block;
-}
+  }
 
   .mobile-controls-left {
     z-index: 2;
@@ -229,9 +235,9 @@ body {
 
   .rotate-90 {
     transform: rotate(90deg);
-}
+  }
 
-.rotate-180 {
+  .rotate-180 {
     transform: rotate(180deg);
-}
+  }
 }
