--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @font-face {
   font-display: swap;
-  font-family: 'Wellfleet';
+  font-family: "Wellfleet";
   font-style: normal;
   font-weight: 400;
-  src: url('./fonts/wellfleet-v22-latin-regular.woff2') format('woff2');
+  src: url("./fonts/wellfleet-v22-latin-regular.woff2") format("woff2");
 }
 
 body {
-  font-family: 'Wellfleet';
+  font-family: "Wellfleet";
   background-image: url("img_pollo_locco/ai-generated-8607619_1920.png");
   background-position: center;
   background-repeat: no-repeat;
@@ -186,7 +186,24 @@ body {
   font-weight: 700;
 }
 
-@media only screen and (min-width: 933px) {
+.overlay-rotate {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 9999;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay-rotate > div {
+  text-align: center;
+}
+
+@media only screen and (min-width: 932px) {
   .mobile-controls {
     display: none;
   }
@@ -223,6 +240,7 @@ body {
     display: none;
   }
 
+  .controlls-icon,
   .fullscreen-icon {
     display: none;
   }
@@ -296,5 +314,9 @@ body {
 
   .rotate-180 {
     transform: rotate(180deg);
+  }
+
+  .overlay-rotate {
+    display: none;
   }
 }
