--- a/style.css
+++ b/style.css
@@ -191,12 +191,14 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  gap: 30px;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 9999;
+  background-color: rgba(168, 162, 162, 0.9);
+  z-index: 2;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .overlay-rotate > div {
@@ -206,6 +208,12 @@ body {
 @media only screen and (min-width: 932px) {
   .mobile-controls {
     display: none;
+  }
+}
+
+@media only screen and (max-width: 530px) {
+  .overlay-rotate {
+      display: flex;
   }
 }
 
@@ -314,9 +322,5 @@ body {
 
   .rotate-180 {
     transform: rotate(180deg);
-  }
-
-  .overlay-rotate {
-    display: none;
   }
 }
