--- a/style.css
+++ b/style.css
@@ -139,8 +139,8 @@ body {
 
 .container {
   position: relative;
-  width: 720px;
-  height: 480px;
+  /*width: 720px;
+  height: 480px;*/
 }
 
 #startScreenContainer,
@@ -220,19 +220,19 @@ body {
   text-align: center;
 }
 
-@media only screen and (min-width: 932px) {
+@media only screen and (min-width: 632px) {
   .mobile-controls {
     display: none;
   }
 }
 
-@media only screen and (max-width: 530px) {
+@media only screen and (max-width: 632px) {
   .overlay-rotate {
       display: flex;
   }
 }
 
-@media only screen and (max-width: 932px) {
+@media only screen and (max-width: 632px) {
   body {
     background-image: none;
   }
