--- a/style.css
+++ b/style.css
@@ -75,6 +75,38 @@ body {
   top: 10px;
 }
 
+#description-window {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.description-content {
+  width: 100%;
+  z-index: 2;
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background-color: white;
+  border: 2px solid black;
+  text-align: justify;
+  overflow-y: auto;
+}
+
+.close-btn {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #ff5733;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
 .legend-container {
   border-radius: 10px;
   align-items: center;
