--- a/media.css
+++ b/media.css
@@ -4,13 +4,13 @@
   }
 }
 
-@media only screen and (max-width: 632px) {
+@media only screen and (max-width: 632px) and (max-height: 480px) {
   .overlay-rotate {
     display: flex;
   }
 }
 
-@media only screen and (max-width: 632px) {
+@media only screen and (max-width: 900px) and (max-height: 480px) {
   body {
     background-image: none;
   }
