--- a/media.css
+++ b/media.css
@@ -4,13 +4,19 @@
   }
 }
 
-@media only screen and (max-width: 632px) and (max-height: 480px) {
+@media only screen and (max-width: 450px) {
   .overlay-rotate {
     display: flex;
   }
 }
 
-@media only screen and (max-width: 900px) and (max-height: 480px) {
+@media only screen and (max-height: 950px) {
+  .mobile-controls {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 932px) and (max-height: 480px) {
   body {
     background-image: none;
   }
